Fix Textarea input bug and minor CSS styles.

--- a/less/app.less
+++ b/less/app.less
@@ -133,9 +133,6 @@ footer.footer {
 .c-date-picker i.fg {
 	height: 35px;
 }
-.flatpickr-months .flatpickr-month {
-	height: 30px;
-}
 #g-progress.c-modal.spin > .dialog {
 	border: none;
 }
@@ -1019,7 +1016,7 @@ footer.footer {
 					//margin-top: 70px; //temporary
 					background-color: #fff;
 					.error {
-						margin: -30px 0 40px 10px;
+						padding: 0px 10px 15px 10px;
 					}
 				}
 			}
