Implement the Step-by-Step for adding/editing Network Inventory IP info.

--- a/less/modal.less
+++ b/less/modal.less
@@ -413,7 +413,7 @@
 					img {
 						width: 200px;
 						height: 200px;
-						border-radius: 100px;
+						border-radius: 50%;
 					}
 					.removePhoto {
 						label {
