--- a/less/app.less
+++ b/less/app.less
@@ -274,6 +274,15 @@ footer.footer {
 	}
 }
 #app-container {
+	header.main-header {
+		position: relative;
+		color: #004d93;
+		font-size: 1.1em;
+		font-weight: bold;
+		padding: 15px;
+		border-bottom: 1px solid #ccc;
+		background-color: #fff;
+	}
 	.sub-header {
 		position: relative;
 		color: #fff;
@@ -505,6 +514,7 @@ footer.footer {
 				}
 				header {
 					color: #004d93;
+					font-size: 1.1em;
 					font-weight: bold;
 					padding: 15px;
 					border-bottom: 1px solid #ccc;
@@ -677,6 +687,8 @@ footer.footer {
 				border-radius: 5px;
 				overflow: hidden;
 				header {
+					color: #004d93;
+					font-size: 1.1em;
 					font-weight: bold;
 					padding: 15px;
 					border-bottom: 1px solid #ccc;
@@ -735,14 +747,6 @@ footer.footer {
 	.data-content {
 		display: flex;
 		min-height: 88vh;
-		header {
-			color: #195f9e;
-			font-size: 1.2em;
-			font-weight: bold;
-			padding: 8px 15px;
-			min-height: 50px;
-			border-bottom: 1px solid #ccc;
-		}
 		.left-nav {
 			position: relative;
 			flex-grow: 0;
@@ -1310,6 +1314,151 @@ footer.footer {
 						}
 					}
 				}
+				&.add-ip-steps {
+					background-color: #fff;
+					min-height: 85vh;
+					input,
+					select,
+					textarea {
+						width: 100%;
+					}
+					footer {
+						position: absolute;
+						bottom: 0;
+						width: 100%;
+						text-align: right;
+						padding: 15px;
+						border-top: 1px solid #ccc;
+						button {
+							margin: 0 5px;
+						}
+					}
+					.steps-indicator {
+						display: flex;
+						justify-content: center;
+						width: 70%;
+						margin: 0 auto;
+						margin-top: 60px;
+						.group {
+							display: flex;
+							width: 100%;
+							&.group1 {
+								width: 13%;
+							}
+						}
+						.step {
+							position: relative;
+							width: 45px;
+							height: 45px;
+							padding: 7px 14px;
+							text-align: center;
+							border-radius: 50%;
+							border: 4px solid #ccc;
+							&.active {
+								color: #fff;
+								background-color: #004d99;
+								border: 4px solid #004d99;
+							}
+							.text {
+								position: absolute;
+								color: #4a4a4a;
+								top: 55px;
+								font-size: 14px;
+								&.text1 {
+									left: -4px;
+								}
+								&.text2 {
+									left: -22px;
+								}
+								&.text3 {
+									left: -22px;
+								}
+								&.text4 {
+									left: -2px;
+								}
+							}
+						}
+						.line {
+							width: 100%;
+							height: 5px;
+							margin-top: 21px;
+							background-color: #ccc;
+							&.active {
+								background-color: #004d99;
+							}
+							&.line1 {
+								display: none;
+							}
+						}
+					}
+					.steps {
+						position: relative;
+						display: flex;
+						flex-wrap: wrap;
+						align-items: center;
+						justify-content: center;
+						text-align: center;
+						margin: 0 auto;
+						margin-top: 145px;
+						width: 70%;
+						padding: 10px 10px 15px 10px;
+						background-color: #f2f2f2;
+						border: 1px solid #ccc;
+						border-radius: 5px;
+						header {
+							position: absolute;
+							top: -40px;
+							left: 0;
+							color: #185e9e;
+							font-size: 1.2em;
+							font-weight: bold;
+						}
+						&.steps-owner {
+							.user-pic {
+								width: 50%;
+								.group,
+								#ownerPhotoUpload {
+									width: 100%;
+								}
+								img {
+									width: 200px;
+									height: 200px;
+									border-radius: 50%;
+									margin-top: 10px;
+								}
+							}
+							.user-info {
+								width: 50%;
+								.group {
+									width: 100%;
+								}
+							}
+						}
+						.group {
+							width: 50%;
+							padding: 5px;
+							label {
+								text-align: left;
+								color: #185e9e;
+								font-size: .9em;
+								display: block;
+								margin-bottom: 3px;
+							}
+						}
+						&.steps-address {
+
+						}
+						&.steps-host {
+
+						}
+						&.steps-owner {
+
+						}
+						&.steps-floor {
+
+						}
+					}
+				}
 			}
 		}
 		.right-content {
@@ -1340,10 +1489,11 @@ footer.footer {
 			border-radius: 5px;
 			background: none;
 			header {
-				text-align: right;
-			}
-			.title {
-				position: absolute;
+				.fg-edit,
+				.fg-trashcan {
+					position: absolute;
+					right: 15px;
+				}
 			}
 			.fg-add.border,
 			.fg-edit,
@@ -1353,7 +1503,6 @@ footer.footer {
 				top: 12px;
 				color: #4a4a4a;
 				font-size: 1.5em;
-				margin-left: 10px;
 				padding: 2px;
 				border: 1px solid #ccc;
 				border-radius: 5px;
