--- a/less/modal.less
+++ b/less/modal.less
@@ -1207,9 +1207,19 @@
 								display: none;
 							}
 							.header {
+								position: relative;
+								width: 60px;
 								color: #185e9e;
-								.fg-play.rotate {
-									transform: rotate(90deg);
+								cursor: default;
+								span {
+									padding-left: 18px;
+								}
+								.fg-play {
+									position: absolute;
+									top: 2px;
+									&.rotate {
+										transform: rotate(90deg);
+									}
 								}
 							}
 							i.fg {
