Implement the Network Inventory Add IP device logic.

--- a/less/app.less
+++ b/less/app.less
@@ -1440,6 +1440,9 @@ footer.footer {
 								.group,
 								#ownerPhotoUpload {
 									width: 100%;
+									input[name='file'] {
+										width: 95%;
+									}
 								}
 								img {
 									width: 200px;
