Implement the Network Inventory device add/edit.

--- a/less/app.less
+++ b/less/app.less
@@ -1422,6 +1422,11 @@ footer.footer {
 							font-weight: bold;
 						}
 						&.steps-owner {
+							button.manage {
+								position: absolute;
+								top: -40px;
+								right: 0;
+							}
 							.owner-type {
 								position: absolute;
 								top: -38px;
@@ -1432,7 +1437,7 @@ footer.footer {
 									margin-right: 15px;
 								}
 								input {
-								width: 20px;
+									width: 20px;
 								}
 							}
 							.user-pic {
@@ -1471,16 +1476,13 @@ footer.footer {
 								display: block;
 								margin-bottom: 3px;
 							}
-							span {
-								text-decoration: underline;
-								cursor: pointer;
-							}
 						}
 						&.steps-floor {
 							padding: 0;
-							.edit {
-								text-decoration: underline;
-								cursor: pointer;
+							button.manage {
+								position: absolute;
+								top: -40px;
+								right: 0;
 							}
 							.floor-info {
 								width: 100%;
