--- a/less/app.less
+++ b/less/app.less
@@ -191,7 +191,7 @@ footer.footer {
 		height: 95vh;
 	}
 	&.fit {
-		height: 71vh;
+		height: 70vh;
 		overflow-y: auto;
 	}
 	.actions {
@@ -755,6 +755,9 @@ footer.footer {
 			min-width: 15px;
 			border-right: 1px solid #d9d9d9;
 			background-color: #d9d9d9;
+			&.floor-tree {
+				background-color: #fff;
+			}
 			&.tree {
 				padding: 10px 25px 10px 10px;
 				&.collapse {
@@ -828,7 +831,7 @@ footer.footer {
 				}
 			}
 			.content-area {
-				padding: 20px 10px;
+				padding: 10px;
 			}
 			.analysis-type {
 				margin-bottom: 10px;
@@ -1068,7 +1071,7 @@ footer.footer {
 					}
 				}
 				.table-content .table {
-					height: 71vh;
+					height: 70vh;
 					overflow-y: auto;
 					&.no-fixed {
 						height: auto;
@@ -1533,16 +1536,21 @@ footer.footer {
 			.content-area {
 				text-align: center;
 				padding: 20px;
-				min-height: 300px;
+				min-height: 60vh;
 			}
 			.data-table {
 				background: none;
 				.main-content {
-					margin: 0 10px 10px 0;
-					border: 1px solid #ccc;
-					background: none;
+					margin: 0;
+					border: none;
+					border-top: 1px solid #d9d9d9;
+					border-radius: 0;
 				}
 			}
+		}
+		.map-container {
+			display: flex;
+			min-height: 78vh;
 		}
 		.floor-plan,
 		.floor-map {
