--- a/less/modal.less
+++ b/less/modal.less
@@ -1059,6 +1059,7 @@
 			clear: both;
 			.info {
 				position: relative;
+				height: 50px;
 				padding-bottom: 5px;
 				padding-top: 25px;
 				overflow: hidden;
@@ -1112,6 +1113,9 @@
 						.rule {
 							padding: 5px 45px;
 							border-top: 1px solid #ccc;
+							.rule-content {
+								margin-bottom: 5px;
+							}
 							&.hide,
 							code.hide {
 								display: none;
@@ -1167,4 +1171,8 @@
 }
 #addDeptTitleDialog-content {
 	padding: 20px;
+}
+#tiggerTaskModal-content {
+	text-align: center;
+	margin-top: 30px;
 }
