--- a/less/app.less
+++ b/less/app.less
@@ -1783,6 +1783,7 @@ footer.footer {
 			th, td {
 				padding: 10px !important;
 				border: 1px solid #ccc !important;
+				white-space: pre-wrap;
 			}
 		}
 	}
