--- a/less/modal.less
+++ b/less/modal.less
@@ -816,6 +816,7 @@
 	margin-top: 30px;
 }
 #flowModalDialog-content {
+	width: 1000px;
 	.table-sort-list {
 		list-style-type: none;
 		overflow: hidden;
