--- a/less/modal.less
+++ b/less/modal.less
@@ -495,6 +495,12 @@
 	}
 }
 #floorModalDialog-content {
+	.area-upload {
+		width: 282px;
+		button {
+			font-size: 15px;
+		}
+	}
 	.left,
 	.right {
 		min-height: 460px;
@@ -1179,4 +1185,17 @@
 #tiggerTaskModal-content {
 	text-align: center;
 	margin-top: 30px;
+}
+#testEmailDialog-content {
+	width: 500px;
+	padding: 20px 20px 25px 20px;
+	.react-multi-email {
+		height: 42px;
+		[data-tag] {
+			padding-top: 10px;
+			color: #fff;
+			background-color: #004d99;
+			margin-bottom: 5px;
+		}
+	}
 }
