--- a/less/modal.less
+++ b/less/modal.less
@@ -34,6 +34,9 @@
 }
 #modalWindowSmall-content {
 	min-width: 300px;
+	.main-table {
+		margin: 0 auto;
+	}
 	.content {
 		margin: 25px 0;
 		text-align: center;
