Complete the Config Auto Settings API implementions. Major code refactor for locale files.

--- a/less/app.less
+++ b/less/app.less
@@ -405,6 +405,7 @@ footer.footer {
 		.maps {
 			position: relative;
 			width: 100%;
+			min-height: 85vh;
 			border: 1px solid #d9d9d9;
 			border-radius: 5px;
 			padding: 10px 5px;
@@ -1044,7 +1045,6 @@ footer.footer {
 							.react-multi-email {
 								display: flex;
 								flex-wrap: wrap;
-								height: 42px;
 								[data-tag] {
 									padding-top: 10px;
 									color: #fff;
