--- a/less/modal.less
+++ b/less/modal.less
@@ -34,6 +34,10 @@
 }
 #modalWindowSmall-content {
 	min-width: 300px;
+	text-align: center;
+	.align-center {
+		margin-top: 30px;
+	}
 	.main-table {
 		margin: 0 auto;
 	}
