Update and complete the HMD safety scan dialog box.

--- a/less/app.less
+++ b/less/app.less
@@ -1384,6 +1384,12 @@ footer.footer {
 					&.last {
 						right: 15px;
 					}
+					&.no-padding {
+						padding: 0;
+						a {
+							padding: .3em 1em;
+						}
+					}
 				}
 				.la-content {
 					height: 79vh;
