--- a/less/app.less
+++ b/less/app.less
@@ -300,7 +300,7 @@ footer.footer {
 			color: #4a4a4a;
 			background-color: #fff;
 		}
-		&.inventory {
+		&.menu {
 			i.fg {
 				font-size: 26px;
 				margin-right: 8px;
@@ -1328,7 +1328,7 @@ footer.footer {
 								width: 1px;
 							}
 							&.Severity {
-								span {
+								span.severity {
 									display: block;
 									color: #fff;
 									width: 70px;
@@ -1406,7 +1406,9 @@ footer.footer {
 				.grid-flex { //For Events File page
 					display: flex;
 					flex-wrap: wrap;
+					height: 62vh;
 					margin: 15px 25px;
+					overflow-x: auto;
 					img {
 						max-width: 200px;
 						max-height: 100px;
